typhon-cluster/apps/filebrowser/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: filebrowser
  labels:
    pod-security.kubernetes.io/enforce: restricted
