typhon-cluster/apps/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
spec:
  selector:
    app: filebrowser
  ports:
    - name: http
      port: 8080
      targetPort: http
