typhon-cluster/apps/filebrowser/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filebrowser
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - files.buildwithcaleb.com
  rules:
    - backendRefs:
        - name: filebrowser
          port: 8080
